update language for NRSV translation

--- a/BSTH/1013.tex
+++ b/BSTH/1013.tex
@@ -101,11 +101,11 @@ coursepack is available in class, directly from Dr. Driver.
 \begin{thebibliography}{Heschel}% use the longest item in the bibliography
 
 	\bibitem[NRSV]{nrsv} \emph{The New Oxford Annotated Bible with
-	Apocrypha}. Oxford: Oxford University Press, 2010
-	(4\textsuperscript{th} edition). Many serviceable translations of
-	the Bible exist, but I assign the NRSV because it is a standard
-	among biblical scholars. If you do not already have a copy then you
-	must purchase one for this class.
+	Apocrypha: New Revised Standard Version}. Oxford: Oxford University
+	Press, 2010 (4\textsuperscript{th} edition). Many serviceable
+	translations of the Bible exist, but the NRSV is a standard among
+	biblical scholars. If you do not already have a copy then you must
+	purchase one for this class.
 
 	\bibitem[Heschel]{heschel} Abraham Joshua Heschel. \emph{The
 	Sabbath: Its Meaning for Modern Man}. New York: Farrar, Straus and
