update learning outcomes intro

--- a/BSTH/1013.tex
+++ b/BSTH/1013.tex
@@ -61,7 +61,7 @@
 \section{Learning Outcomes}
 \label{outcomes}
 
-The learning outcomes in this course will be determined by each
+The learning outcomes for this course are in part a function of each
 student's ability to meet specific goals (learning objectives). By the
 end of the course students should be able to:
 	name major Old Testament people and events;
