--- a/template/000_template.tex
+++ b/template/000_template.tex
@@ -100,7 +100,7 @@
 % If you reference a List of Measurable Verbs Used to Assess Learning
 % Outcomes, remember that A&K reverse Bloom's 6th and 5th categories.
 
-The learning outcomes in this course will be determined by each
+The learning outcomes for this course are in part a function of each
 student's ability to meet specific goals (learning objectives). By the
 end of the course students should be able to:
 	name;
