update common files, draft F2015 1013 syllabus

--- a/BSTH/1013-OT-Scripture.tex
+++ b/BSTH/1013-OT-Scripture.tex
@@ -11,7 +11,7 @@
 \newcommand\incl{../includes}
 \input{\incl/variables}
 
-\coursecode[7.5.0]{BSTH 1013}
+\coursecode[8.0]{BSTH 1013}
 \coursetitle{Old Testament Scripture}
 
 % Previously taught as RLGS 1013 in:
@@ -28,16 +28,17 @@
 %   - Fall 2013
 %   - Winter 2014
 %   - Fall 2014
+%   - Winter 2015
 
 \professor{Daniel R. Driver}
 \phone{416-226-6620 ext. 2201}
 \email{ddriver@tyndale.ca}
-\officehours{Mon. \& Wed., 1:30--3:30 \PM}
+\officehours{Mon. \& Wed., 2:30--3:30 \PM}
 
-\semester{Winter 2015}
-\meets{Thursdays}% \meets{on}{at}{in}
-      {8:15--11:05 \AM}
-      {Ballyconnor 2087}
+\semester{Fall 2015}
+\meets{Mon \& Wed}% \meets{on}{at}{in}
+      {3:45--5:05 \PM}
+      {Bayview E320}
 \website{classes.tyndale.ca}
 \cdescription{% copy from tyndale.ca/registrar/calendar
 
@@ -70,11 +71,11 @@ end of the course students should be able to:
 	locate a few important biblical sites on a map;
 	understand the general shape of the Masoretic Text tradition and differentiate it from other canonical orders and traditions;
 	recognize genres of biblical literature and cite examples from the reading;
-	list the Ten Commandments in order;
+%	list the Ten Commandments in order;
 	articulate multiple rationales for sabbath observance;
 	defend a decision to pronounce or circumlocute the divine name;
 	classify prophetic literature relative to the exile;
-	report on apparent parallels, synchronisms, tensions, and contradictions in and across the Law and the Prophets;
+	report on parallel and divergent material across the Law and the Prophets;
 	memorize and recite Psalm 8.
 
 Students should also be able to identify settings in which the
@@ -100,25 +101,27 @@ coursepack is available in class, directly from Dr. Driver.
 \renewcommand{\section}[2]{}% temporarily remove the section heading
 \begin{thebibliography}{Heschel}% use the longest item in the bibliography
 
-	\bibitem[NRSV]{nrsv} \emph{The New Oxford Annotated Bible with
-	Apocrypha: New Revised Standard Version}. Oxford: Oxford University
-	Press, 2010 (4\textsuperscript{th} edition). Many serviceable
-	translations of the Bible exist, but the NRSV is a standard among
-	biblical scholars. If you do not already have a copy then you must
-	purchase one for this class.
+	\bibitem[NJPS]{njps}
+	Adele Berlin and Marc Zvi Brettler, eds.
+    \emph{The Jewish Study Bible: Second Edition}.
+    Oxford / New York: Oxford University Press, 2014.
+    ISBN 978-0199978465.
+	Many serviceable translations of the Bible exist, including the NRSV
+	and ESV. The NJPS allows students in this course to better
+	appreciate the relationship of the first part of Christian Scripture
+	to the Scriptures of Israel (also called the Hebrew Bible), which is
+	one of the course's fundamental objectives. In addition, this
+	revised study Bible contains an outstanding set of introductory
+	notes and essays in a highly readable, single-column format. It is
+	required.
 
-	\bibitem[Heschel]{heschel} Abraham Joshua Heschel. \emph{The
-	Sabbath: Its Meaning for Modern Man}. New York: Farrar, Straus and
-	Giroux, 1951 (repr. 2005). Read this classic example of
-	20\textsuperscript{th} century Jewish spirituality on your own, no
-	later than the fourth week of class. Review it in preparation for
-	the class on which it is assigned.
 
-	\bibitem[Moberly]{moberly} R.\,W.\,L. Moberly. \emph{Old Testament
-	Theology: Reading the Hebrew Bible as Christian Scripture}. Grand
-	Rapids: Baker Academic, 2013. Read these eight essays by a leading
-	Old Testament scholar and biblical theologian in parallel with (but
-	after completing) the assigned Bible readings.
+%	\bibitem[Heschel]{heschel} Abraham Joshua Heschel. \emph{The
+%	Sabbath: Its Meaning for Modern Man}. New York: Farrar, Straus and
+%	Giroux, 1951 (repr. 2005). Read this classic example of
+%	20\textsuperscript{th} century Jewish spirituality on your own, no
+%	later than the fourth week of class. Review it in preparation for
+%	the class on which it is assigned.
 
 	\bibitem[OTSIC]{otsic} Daniel R. Driver. \emph{\ctitle\ Introductory
 	Coursepack}. Toronto, \csemester. In response to the requests of
@@ -134,17 +137,17 @@ coursepack is available in class, directly from Dr. Driver.
 
 Supplementary readings are listed in the bibliographies that follow each
 page of notes in the coursepack. Excerpts from this literature,
-ordinarily an article or a book chapter per week, will be available for
-download through the course website (alternately, some may be placed on
-reserve in the library). Students are not strictly required to read this
-supplementary material; then again, students who choose not to read it
-should not expect to get an A for the course.
+ordinarily an article or a book chapter per week, will either be made
+available for download through the course website, or else be designated
+from the introductory essays included in the NJPS Study Bible. Students
+are not strictly required to read this material; then again, students
+who choose not to read it should not expect to get an A for the course.
 
 Note that the required readings for this survey emphasize a selection of
 primary texts from the Old Testament. Reading in the vast body of
 secondary literature on the Bible is largely left for upper-division
 courses. Diligent students, however, and all prospective majors, will
-make a special point of reviewing the supplementary articles.
+make a special point of reviewing the designated supplementary texts.
 
 \section{Evaluation}
 \label{evaluation}
@@ -187,8 +190,8 @@ The breakdown for the semester's total work is as follows:
   {\lining
   \begin{tabular}{lr}
     \toprule
-    Reading Quizzes & 25\% \\
-    Memorization    & 15\% \\
+    Reading Quizzes & 30\% \\
+    Memorization    & 10\% \\
     Midterm Exam    & 30\% \\
     Final Exam      & 30\% \\
     \bottomrule
@@ -237,55 +240,56 @@ the right to adjust it to suit the needs of the class.
 
 	\unit{Beginnings} \\
 
-		& Psalms 8, 74, 104               & Syllabus         &  8 Jan.        \\
+		& Psalms 8, 74, 104               & Syllabus         & 14 Sep.        \\
+		& Genesis 1--11                   & P. Enns          & 16 Sep.        \\ [1ex]
 
-		& Genesis 1--11                   & Heschel (begin)  & 15 Jan.        \\
-		& Genesis 12--36                  &                  &                \\
+		& Genesis 12--36                  &                  & 21 Sep.        \\
+		& Genesis 37--50                  & J. Levenson      & 23 Sep.        \\ [1ex]
 
-		& Genesis 37--50                  &                  & 22 Jan.        \\
-		& Exodus 1--6, 32--34             &                  &                \\ [1ex]
+		& Exodus 1--6, 32--34             &                  & 28 Sep.        \\
+		& Exodus 7--18                    & C. Mathews McGinnis  & 30 Sep.    \\ [1ex]
 
-	\unit{Out of Egypt} \\
+	\unit{Legal Traditions} \\
 
-		& Exodus 7--24                    & Moberly 3        & 29 Jan.        \\
-		& Exodus 20, Deuteronomy 5        & Heschel (finish) &                \\
-	\reminder{\textbf{Recitation of Psalm 8} (during Dr. Driver's office hours)}{\emph{from} 29 Jan.} \\
+	\reminder{\textbf{Recitation of Psalm 8} (during Dr. Driver's office hours)}{\emph{from} 5 Oct.} \\
+		& Exodus 19--24                   & D. Patrick       &  5 Oct.        \\
+		& Deuteronomy 1--11               &                  &  7 Oct.        \\ [1ex]
 
-		& Deuteronomy 1--11               & Moberly 1        &  5 Feb.        \\
-		& Deuteronomy 12--26              &                  &                \\
+    \noclass{Thanksgiving}                                   & 12 Oct.        \\
+		& Deuteronomy 12--26              & B. Levinson      & 14 Oct.        \\ [1ex]
 
-		& Deuteronomy 27--34              & Moberly 2        & 12 Feb.        \\
-		& \textbf{Midterm Exam} (given in class) &           &                \\
+		& Deuteronomy 27--34              &                  & 19 Oct.        \\
+		& \textbf{Midterm Exam} (given in class) &           & 21 Oct.        \\ [1ex]
 
-	\noclass{Reading Week}                                   & 19 Feb.        \\ [1ex]
+%	\noclass{Reading Week}                                   & 26 Oct.        \\ [1ex]
 
-	\unit{In the Land} \\
+	\unit{Former Prophets} \\
 
-		& Joshua 1--13:7, 22--24          &                  & 26 Feb.        \\
-		& Judges 1--16, 19--21            & Moberly 4        &                \\
+		& Joshua 1--13:7, 22--24          & D. Earl          & 26 Oct.        \\
+		& Judges 1--16, 19--21            &                  & 28 Oct.        \\ [1ex]
 
-		& 1 Samuel 1--15                  &                  &  5 Mar.        \\
-		& 1 Samuel 16--31, 2 Samuel 1--12 &                  &                \\
+		& 1 Samuel 1--15                  &                  &  2 Nov.        \\
+		& 1 Samuel 16--31, 2 Samuel 1--12 & M. Sweeney       &  4 Nov.        \\ [1ex]
 
-		& 1 Kings 1--14                   &                  & 12 Mar.        \\
-		& 2 Kings 17--25                  &                  &                \\ [1ex]
+		& 1 Kings 1--14                   &                  &  9 Nov.        \\
+		& 2 Kings 17--25                  & O. Lipschits     & 11 Nov.        \\ [1ex]
 
 	\unit{Latter Prophets} \\
 
-		& Isaiah 1--12, 36--39            & Moberly 5        & 19 Mar.        \\
-		& Hosea, Joel, Amos               &                  &                \\
+		& Isaiah 1--12, 36--39            &                  & 16 Nov.        \\
+		& Isaiah 40-54                    & B. Sommer        & 18 Nov.        \\ [1ex]
 
-		& Jonah 1--4                      & Moberly 6        & 26 Mar.        \\ [1ex]
+        & Hosea, Joel, Amos               &                  & 23 Nov.        \\
+		& Jonah, Micah, Nahum             & E. Ben Zvi       & 25 Nov.        \\ [1ex]
 
 	\unit{Wisdom \& Praise} \\
 
-		& Ecclesiastes 1--12              &                  & \emph{also} 26 Mar. \\
+		& Ecclesiastes 1--12              &                  & 30 Nov.        \\
+		& Proverbs 1--9, 30--31           & M. Fox           &  2 Dec.        \\ [1ex]
 
-		& Psalms 1--2, 34, 44, 51, 150    & Moberly 7        &  2 Apr.        \\
-		& Psalms 72--73, 89--90, 104--106 &                  &                \\ [1ex]
-
-	\noclass{Reading Days}                                   & 6--7 Apr.      \\
-	\reminder{\textbf{Final Exam} (as schedule by the Registrar)}{8--15 Apr.} \\
+		& Psalms 1--2, 72--73, 89--90, 104--106 & M. Cameron &  7 Dec.        \\
+	\noclass{Reading Day}                                    &  8 Dec.        \\ [1ex]
+	\reminder{\textbf{Final Exam} (as schedule by the Registrar)}{9--16 Dec.} \\
 	\bottomrule
   \end{tabular}
   \caption{Schedule of Readings}
