--- a/BSTH/4403-Forgiveness.tex
+++ b/BSTH/4403-Forgiveness.tex
@@ -135,12 +135,12 @@ et savoir, suivi de Le Siècle et le pardon} [Paris: Seuil, 2000]).
 
 	\item Each week, after the Monday class but before 10 \AM\ on
 	Wednesday, you are to post a brief (200 word) response to a prompt
-	on the Moodle \textbf{discussion forum} (see \ref{mytyndale}). If
-	quizzes gauge comprehension, the forum provides an opportunity to
-	critique or construct knowledge, and to share or probe experiences.
-	Aim to take risks. Be creative, thoughtful, honest, courteous, and
+	on the \textbf{discussion forum} (see \ref{mytyndale}). If quizzes
+	gauge comprehension, the forum provides an opportunity to critique
+	or construct knowledge, and to share or probe experiences. Aim to
+	take risks. Be creative, thoughtful, honest, courteous, and
 	punctual. If you have time before the class on Wednesdays, read and
-	comment on the posts of your classmates. In the first weeks at least
+	respond to the posts of your classmates. In the first weeks at least
 	I will score posts on a scale of 0 to 3.
 
 	\item In week 6 students are to present a \textbf{case study} to the
