--- a/includes/variables.tex
+++ b/includes/variables.tex
@@ -1,4 +1,4 @@
-\ProvidesFile{variables.tex}[2013/09/06 v1.0 -- Syllabus variables]
+\ProvidesFile{variables.tex}[2015/07/28 v1.1 -- Syllabus variables]
 
 \usepackage{xspace} % make manual spaces (like \mycmd\ ) unnecessary
 \usepackage{xifthen} % provides \isempty test
@@ -30,7 +30,7 @@
   \renewcommand\pphone{\addfontfeatures{Numbers=Monospaced}#1\xspace}}
 \newcommand\email[1]{
   \renewcommand\pemail{\href{mailto:#1}{#1}\xspace}}
-\newcommand\officehours[2][Ballyconnor 1088]{
+\newcommand\officehours[2][Bayview G410]{
   \renewcommand\poffice{#1\xspace}
   \renewcommand\phours{#2\xspace}}
 %
