--- a/policy/assignments.tex
+++ b/policy/assignments.tex
@@ -7,7 +7,7 @@ This is a university course. All papers and other writing assignments
 should therefore be written at the university level. Submissions must be
 typewritten and double-spaced, should be free from error, and in this course
 should follow the \emph{SBL Handbook of Style} (refer to the free, online
-\href{http://www.sbl-site.org/assets/pdfs/sblhs_ss92804_revised_ed.pdf}{SBLHS
+\href{https://www.sbl-site.org/assets/pdfs/pubs/SBLHSsupp2015-02.pdf}{SBLHS
 Student Supplement}.)
 
 If you ever struggle with composition---anything from the relatively simple
@@ -42,7 +42,7 @@ management' or `over-involvement' in an extracurricular activity.''
 \label{submission}
 
 Papers and some other assignments in this course are to be submitted
-electronically through the course pages (Section~\ref{mytyndale}). To preserve
+electronically through the course pages (Section~\ref{lms}). To preserve
 formatting, formal writing assignments must be uploaded in Portable Document
 Format. There are many ways of creating PDFs; it is your responsibility to
 know how to do so on the computer platform you use, and to generate and submit
