--- a/policy/technology-hebrew.tex
+++ b/policy/technology-hebrew.tex
@@ -25,8 +25,8 @@ happily receive an email from you requesting an alternate meeting time.
 
 % Note the prof who adopted an anti-email policy! https://www.insidehighered.com/news/2014/08/27/sake-student-faculty-interaction-professor-bans-student-email?utm_source=slate&utm_medium=referral&utm_term=partner
 
-\subsubsection{MyTyndale.ca / classes.tyndale.ca}
-\label{mytyndale}
+\subsubsection{classes.tyndale.ca}
+\label{lms}
 
 Tyndale's course pages are an efficient means of distributing articles, notes,
 slides, and other course-related materials. This is also where instructors log
