update other common files for Fall 2015

--- a/textbook_requisitions.tex
+++ b/textbook_requisitions.tex
@@ -1,81 +1,67 @@
-% -*- program: xelatex -*-
+% !TEX encoding = UTF-8 Unicode
+% !TEX TS-program = XeLaTeX
 
 \documentclass[11pt]{article}
 
 % Typography
 \usepackage{fontspec}
-\setmainfont[Ligatures=TeX]{Arno Pro}
-\setsansfont[Ligatures=TeX]{Myriad Pro}
-\setmonofont[Scale=MatchLowercase]{Menlo}
+\setmainfont[Ligatures=TeX]{Brill}
 \usepackage{booktabs}
 \frenchspacing
 
-\title{Winter 2015 Textbook Requisitions}
-\author{Daniel R. Driver (616-226-6620 x2201 or ddriver@tyndale.ca)}
-\date{Submitted to the Tyndale Bookstore on 14 October 2014}
+
+\title{Fall 2015 Textbook Requisitions}
+\author{Daniel R. Driver (ddriver@tyndale.ca)}
+\date{Submitted to the Tyndale Bookstore on 18 June 2015}
 
 \begin{document}
 
 \maketitle
 
-Please order the following textbooks for my \textbf{three} classes next semester. All
-textbooks are \textbf{required} unless otherwise stated.
+Please order the following textbooks for my three classes next semester.
+Note that one of these (BSTH 440/315) will be offered at two different
+credit levels. All textbooks are \textbf{required} unless otherwise
+stated.
 
-\section{BSTH 1013: Old Testament Scripture (66/75 students enrolled)}
+\section{\textsc{bsth} 1013: Old Testament Scripture (51/75 students enrolled)}
 
 \begin{description}
 
-	\item[978-0801048852] R.\,W.\,L. Moberly.
-    \emph{Old Testament Theology: Reading the Hebrew Bible as Christian Scripture}.
-    Grand Rapids: Baker Academic, 2013.
-
-	\item[978-0374529758] Abraham Joshua Heschel.
-    \emph{The Sabbath: Its Meaning for Modern Man}.
-    New York: Farrar, Straus and Giroux, 1951 (repr. 2005).
-
-	\item[978-0195289602] \emph{The New Oxford Annotated Bible with Apocrypha}.
-    Oxford: Oxford University Press, 2010 (4\textsuperscript{th} edition).
-    If students do not already have a copy of the NRSV then they should purchase this one for this class.
+	\item[978-0199978465] Adele Berlin and Marc Zvi Brettler, eds.
+    \emph{The Jewish Study Bible: Second Edition}.
+    Oxford / New York: Oxford University Press, 2014.
+    Please note that this study Bible is absolutely required: in
+    addition to a particular translation, it contains several essays
+    that students need to read. Other Bibles will not suffice.
 
 \end{description}
 
-\section{BSTH 4403: TOBITH -- Forgiveness (12/12 students enrolled)}
+\section{\textsc{bsth} 4403: \textsc{tobith} -- Ecclesiastes (4/12 students enrolled);
+also cross-listed as \textsc{bsth} 3153: Writings (?/35 students enrolled)}
 
 \begin{description}
 
-	\item[978-0142437261]  Nathaniel Hawthorne, ed. by Thomas E. Connolly.
-	\emph{The Scarlet Letter} (paperback).
-	Penguin Classics, 2002.
+	\item[978-0199229970] Samuel Johnson, ed. by Thomas Keymer.
+	\emph{The History of Rasselas, Prince of Abissinia} (new edition).
+	Oxford / New York: Oxford University Press, 2009.
 
-	\item[978-0393348880] Dara Horn.
-    \emph{A Guide for the Perplexed: A Novel} (paperback).
-    W. W. Norton \& Company, 2014.
+	\item[978-0470674918] Eric S. Christianson.
+    \emph{Ecclesiastes Through the Centuries} (paperback).
+    Chichester, West Sussex: Wiley-Blackwell, 2012.
 
-	\item[978-1107680203] David Konstan.
-	\emph{Before Forgiveness: The Origins of a Moral Idea} (paperback).
-	Cambridge University Press, 2012.
-
-    \item[978-0385496902] Desmond Tutu.
-    \emph{No Future Without Forgiveness} (paperback).
-    New York: Image / Doubleday, 2000.
-
-    \item[978-0802808615, optional] L. Gregory Jones.
-    \emph{Embodying Forgiveness: A Theological Analysis}.
-    Grand Rapids: Eerdmans, 1995.
+	\item[978-1575062815] Katharine Dell.
+	\emph{Interpreting Ecclesiastes: Readers Old and New}.
+	Winona Lake, Indiana: Eisenbrauns, 2013.
 
 \end{description}
 
-\section{HEBR 3023: Readings in Biblical Hebrew II (5 students enrolled)}
+\section{\textsc{hebr} 2013: Intro to Biblical Hebrew I (8/35 students enrolled)}
 
 \begin{description}
 
-	\item[978-1932792911] Robert D. Holmstedt.
-	\emph{Ruth: A Handbook on the Hebrew Text}.
-	Baylor University Press, 2010.
-
-	\item[978-0802094292] John C. Beckman.
-	\emph{Williams' Hebrew Syntax, Third Edition}.
-	University of Toronto Press, 2007.
+	\item[978-0801048869] John A. Cook and Robert D. Holmstedt.
+	\emph{Beginning Biblical Hebrew: A Grammar and Illustrated Reader}.
+	Grand Rapids: Baker Academic, 2013.
 
 \end{description}
 
