final -WIP versions of all syllabi for Fall 2015

--- a/includes/title.tex
+++ b/includes/title.tex
@@ -53,7 +53,7 @@
         assignments. Students are responsible for checking these course
         pages on a regular basis. Here, too, students are able to view
         their grades throughout the semester. For more information see
-        Section~\ref{mytyndale}, below.
+        Section~\ref{lms}, below.
       \item[Mail]
         Students are responsible for information communicated through
         their campus mailboxes and student e-mail accounts. A mailbox
