--- a/BSTH/1013-OT-Scripture.tex
+++ b/BSTH/1013-OT-Scripture.tex
@@ -11,7 +11,7 @@
 \newcommand\incl{../includes}
 \input{\incl/variables}
 
-\coursecode[8.0]{BSTH 1013}
+\coursecode[8.0-WIP]{BSTH 1013}
 \coursetitle{Old Testament Scripture}
 
 % Previously taught as RLGS 1013 in:
@@ -63,19 +63,19 @@
 \label{outcomes}
 
 The learning outcomes for this course are in part a function of each
-student's ability to meet specific goals (learning objectives). By the
-end of the course students should be able to:
+student's ability to meet specific objectives. By the end of the course
+students should be able to:
 	name major Old Testament people and events;
 	identify representative biblical quotes by book and chapter;
 	give key dates for Israel's history and summarize the succession of superpowers in the Ancient Near Eastern political theatre from the time of Egypt to Greece;
 	locate a few important biblical sites on a map;
-	understand the general shape of the Masoretic Text tradition and differentiate it from other canonical orders and traditions;
-	recognize genres of biblical literature and cite examples from the reading;
-%	list the Ten Commandments in order;
-	articulate multiple rationales for sabbath observance;
-	defend a decision to pronounce or circumlocute the divine name;
 	classify prophetic literature relative to the exile;
+	recognize genres of biblical literature and cite examples from the reading;
+	understand the general shape of the Masoretic Text tradition and differentiate it from other canonical orders;
+%	list the Ten Commandments in order;
+%	defend a decision to pronounce or circumlocute the divine name;
 	report on parallel and divergent material across the Law and the Prophets;
+	articulate multiple rationales for sabbath observance;
 	memorize and recite Psalm 8.
 
 Students should also be able to identify settings in which the
